implement sticky navigation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <nav>
+    <nav id="nav">
       <div class="nav-container">
         <div class="logo">
           <a href=""><img src="/images/flowbox-white-logo.png" alt="" srcset=""></a>
@@ -31,5 +31,9 @@
       </div>
     </div>
   </header>
+  <div class="cards">
+    
+  </div>
+  <script src="/js/app.js"></script>r
 </body>
 </html>
