--- a/index.html
+++ b/index.html
@@ -1,39 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header>
-    <nav id="nav">
-      <div class="nav-container">
-        <div class="logo">
-          <a href=""><img src="/images/flowbox-white-logo.png" alt="" srcset=""></a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <nav id="nav">
+        <div class="nav-container">
+          <div class="logo">
+            <a href=""><img src="/images/Untitled-1.png" alt="" srcset="" /></a>
+          </div>
+          <div class="nav-list">
+            <ul class="nav-links">
+              <li>Contact</li>
+              <li>About Us</li>
+              <li>Tarifas</li>
+            </ul>
+          </div>
         </div>
-        <div class="nav-list">
-          <ul class="nav-links">
-            <li>Contact</li>
-            <li>About Us</li>
-            <li>Tarifas</li>
-          </ul>
+      </nav>
+      <div class="hero-info">
+        <h1>Traemos Todas tus Compras</h1>
+        <h2>Trae tu carga de Miami a Panamá con nosotros.</h2>
+        <div class="contact-btn">
+          <a href="https://wa.me/+50762149339">abrir casillero ></a>
+        </div>
+        <div class="icons-container">
+          <div class="icon-card">
+            <img src="/images/air-freight.svg" alt="" srcset="" />
+            <p>Carga Aerea</p>
+          </div>
+          <div class="icon-card">
+            <img src="/images/ship.svg" alt="" srcset="" />
+            <p>Carga Maritima</p>
+          </div>
+          <div class="icon-card">
+            <img src="/images/truck.svg" alt="" srcset="" />
+            <p>Delivery gratis</p>
+          </div>
         </div>
       </div>
-    </nav>
-    <div class="hero-info">
-      <h1>Traemos Todas tus Compras</h1>
-      <h2>Trae tu carga de Miami a Panamá con nosotros.</h2>
-      <div class="contact-btn">
-        <a href="https://wa.me/+50762149339">abrir casillero ></a>
-      </div>
-    </div>
-  </header>
-  <div class="cards">
-    
-  </div>
-  <script src="/js/app.js"></script>r
-</body>
+    </header>
+    <main>
+      <section id="services">
+        <div class="services-container">
+          <div class="info-header">
+            <p>porque nosotros</p>
+            <span>Nuestras Ventajas</span>
+          </div>
+          <div class="avatars">
+            <div class="avatar-info">
+              <div class="avatar-container">
+                <img src="/images/money.svg" alt="" />
+              </div>
+              <h3>tarifas competitivas</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="avatar-info">
+              <div class="avatar-container">
+                <img src="/images/honesty.svg" alt="" />
+              </div>
+              <h3>confianza y puntualidad</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="avatar-info">
+              <div class="avatar-container">
+                <img src="/images/shipping.svg" alt="" />
+              </div>
+              <h3>solo peso real</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+          </div>
+          <div class="contact-btn"><a href="#">Aprende mas ></a></div>
+        </div>
+      </section>
+    </main>
+    <div class="cards"></div>
+    <script src="/js/app.js"></script>
+    r
+  </body>
 </html>
