--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
@@ -78,9 +85,33 @@
           <div class="contact-btn"><a href="#">Aprende mas ></a></div>
         </div>
       </section>
+      <section id="counter">
+        <div class="counter-container">
+          <div class="counter-info-container">
+            <h5>numeros que hablan </h5>
+            <p></p>
+          </div>
+          <div class="counter-info-container">
+            <img src="/images/airplane.svg" alt="" srcset="" />
+            <h4><i class="fas fa-plus"></i> 150</h4>
+            <p>Vuelos Semanales</p>
+          </div>
+          <div class="counter-info-container">
+            <img src="/images/package.svg" alt="" srcset="" />
+            <h4><i class="fas fa-plus"></i> 300</h4>
+            <p>Paquetes Entregados</p>
+          </div>
+          <div class="counter-info-container">
+            <img src="/images/customer.svg" alt="" srcset="" />
+            <h4><i class="fas fa-plus"></i> 100</h4>
+            <p>Clientes Satisfechos</p>
+          </div>
+        </div>
+      </section>
     </main>
-    <div class="cards"></div>
+    <section id="prices">
+      <h5>nuestras tarifas</h5>
+    </section>
     <script src="/js/app.js"></script>
-    r
   </body>
 </html>
