--- a/index.html
+++ b/index.html
@@ -110,8 +110,48 @@
       </section>
     </main>
     <section id="prices">
-      <h5>nuestras tarifas</h5>
+      <div class="prices-container">
+        <div class="title">nuestras tarifas</div>
+        <div class="info-container">
+          <div class="left-info-section">
+            <h4>Tarifa Express</h4>
+            <p>Paga sólo por lo que traigas.
+              Cobramos en base al peso de tu mercancía y no sobre el valor de la misma.
+              No cobramos anualidad ni mensualidad.</p>
+          </div>
+          <div class="right-info-section">
+            <h5>peso por libra</h5>
+            <span>$2.45 x lb</span>
+            <img src="/images/airplane.svg" style="width:50px; position: absolute; left: 40px; opacity: 0.5;" alt="" srcset="">
+
+          </div>
+        </div>
+        <div class="info-container">
+          <div class="left-info-section">
+            <h4>Tarifa Maritima</h4>
+            <p>Paga sólo por lo que traigas.
+              Cobramos en base al peso de tu mercancía y no sobre el valor de la misma.
+              No cobramos anualidad ni mensualidad.</p>
+          </div>
+          <div class="right-info-section">
+            <h5>peso por libra</h5>
+            <span>$1.75 x lb</span>
+            <img src="/images/ship.svg" style="width:50px; position: absolute; left: 40px; opacity: 0.5;" alt="" srcset="">
+          </div>
+        </div>
+      </div>
     </section>
+    <footer>
+      <div class="footer-container">
+        <img src="/images/flowbox-white-logo-modified.png" alt="" srcset="">
+        <p>siguenos</p>
+        <div class="footer-links">
+          <a href=""><i class="fab fa-instagram fa-2x"></i></a>
+          <a href=""><i class="fab fa-facebook fa-2x"></i></a>
+          <a href=""><i class="fab fa-whatsapp fa-2x"></i></a>
+        </div>
+      </div>
+    </footer>
     <script src="/js/app.js"></script>
   </body>
 </html>
